# calendario

./: .gitignore  Dockerfile  README.md  app.py  calendario.build  calendario.container  calendario.service  env.example  models.py  pyproject.toml  requirements.txt
PLANS/: alexa.md  personas-configurables.md  readonly.md  refactor.md
SPECS/: alexa.md
alexa/: config.json
alexa/interaction-model/: es-ES.json
alexa/skill-package/: skill.json
instance/: calendar.db
src/absences/: __init__.py  serializers.py  service.py
src/alexa/: __init__.py  alexa.py
src/bootstrap/: __init__.py  schema.py  startup.py
src/calendar/: __init__.py  constants.py  service.py
src/contacts/: __init__.py  service.py
src/embed/: __init__.py  embed.py
src/holidays/: __init__.py  holidays.py
src/httpcache/: __init__.py  cache.py
src/models/: __init__.py  models.py
src/shifts/: __init__.py  serializers.py  service.py
src/sqlite_vec/: __init__.py
static/: style.css
templates/: _shift_editor_modal.html  absences.html  base.html  calendar.html  contacts.html  settings.html  week.html
tools/: alexa_sync.py  test_alexa_webhook.py
